<resources>
    <string name="app_name">App_covid_19</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="titulo_menu_principal">Main Menu</string>
    <string name="novo_perfil">New Profile</string>
    <string name="procurar_perfil">Find Profile</string>
    <string name="sair_app">Exit</string>
    <string name="titulo_gestao_dados">Data Management</string>
    <string name="dados_pessoais">Personal data</string>
    <string name="Doencas">Deseases</string>
    <string name="titulo_dados_pessoais">Personal Data</string>
    <string name="nome">Name</string>
    <string name="guardar_dados_pessoais">Save</string>
    <string name="doencas_conhecidas">Known Diseases</string>
    <string name="outras_doencas">Other Diseases</string>
    <string name="guardar_doencas_conhecidas">Save</string>
    <string name="doencas_oncologicas">Oncological Diseases</string>
    <string name="hipertensao">Hypertension</string>
    <string name="doencas_respiratorias">Respiratory Diseases</string>
    <string name="doencas_cardiovsaculares">Cardiovascular Diseases</string>
    <string name="selecionar_perfil">Select Profile</string>
    <string name="gerir_perfil">Manage Profile</string>
    <string name="perfil_selecionado">Selected Profile</string>
    <string name="editar_perfil">Edit Profiles</string>
    <string name="alterar_prefil">Change profile Data</string>
    <string name="apagar_perfil">Delete Profile</string>
    <string name="registo_diario">Daily Registration</string>
    <string name="historico">Historic</string>
    <string name="titulo_registo_diario">Daily Log</string>
    <string name="temperatura">Temperature</string>
    <string name="tosse">Cough</string>
    <string name="dificuldade_respiratoria">Breathing Difficulty</string>
    <string name="guardar_registo_diario">Save</string>
    <string name="media_temperaturas">Temperature average</string>
    <string name="dias_consecutivos_tosse">Consecutive days with cough</string>
    <string name="dias_consecutivos_dif_resp">Consecutive days with breathing difficulties</string>
    <string name="tabela_registos_diarios">Daily Record Table</string>
    <string name="historic">Historic</string>
    <string name="novo_teste">New</string>
    <string name="testes">Tests</string>
    <string name="resultado_teste">Test Result</string>
    <string name="positivo">Positive</string>
    <string name="negativo">Negative</string>
    <string name="inconcclusivo">Inconcclusive</string>
    <string name="guardar_resultado_teste">Save</string>
    <string name="titulo_tabela_registos">Daily Record Table</string>
    <string name="titulo_tabela_testes">Tests Table</string>
    <string name="diabetes">Diabetes</string>
    <string name="get_date">Get Date</string>
    <string name="daily_date">Daily date</string>
    <string name="data_nascimento">Birth date</string>
    <string name="data_resultado_teste">Test result date</string>
</resources>
