<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_testes" >

    <TextView
        android:id="@+id/textViewTituloTestes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewPerfilSelecionadoTestes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNovoTeste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_teste"
        app:layout_constraintBottom_toTopOf="@+id/buttonHistoricoTestes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPerfilSelecionadoTestes" />

    <Button
        android:id="@+id/buttonHistoricoTestes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNovoTeste" />

    <TextView
        android:id="@+id/textViewPerfilSelecionadoTestes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_selecionado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonNovoTeste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloTestes" />
</androidx.constraintlayout.widget.ConstraintLayout>