<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_gestao_dados">

    <TextView
        android:id="@+id/textViewTituloGestaoDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_gestao_dados"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDadosPessoais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDadosPessoais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_pessoais"
        app:layout_constraintBottom_toTopOf="@+id/buttonDoencas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloGestaoDados" />

    <Button
        android:id="@+id/buttonDoencas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Doencas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDadosPessoais" />

</androidx.constraintlayout.widget.ConstraintLayout>